--- a/SpotifyProject/index.html
+++ b/SpotifyProject/index.html
@@ -15,6 +15,9 @@
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <!--Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
     <title>Música para todos - Spotify</title>
     <link rel="icon" href="img/favicon.png">
 
